// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge should render the badge component 1`] = `
<div>
  <span
    class="badge"
  >
    Badge
  </span>
</div>
`;

exports[`Badge should render the badge component with a custom class name 1`] = `
<div>
  <span
    class="badge custom-class"
  >
    Badge
  </span>
</div>
`;
